k8s-app-resources/ghost-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ghost
  name: ghost
