k8s-app-resources/ghost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn:  arn:aws:acm:ap-southeast-2:505070718513:certificate/ea08aee5-1ed1-41d4-ace6-be8abf611b8d
    external-dns.alpha.kubernetes.io/hostname: ghost.jasonumiker.com  
  labels:
    app: ghost
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ghost
              servicePort: 2368
